# ChangeLog for x11-apps/xmessage
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xmessage/ChangeLog,v 1.31 2007/12/20 00:25:20 cla Exp $

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> xmessage-1.0.2.ebuild:
  Stable on x86 (bug #202087)

  16 Dec 2007; Markus Rothe <corsair@gentoo.org> xmessage-1.0.2.ebuild:
  Stable on ppc64; bug #202087

  16 Dec 2007; nixnut <nixnut@gentoo.org> xmessage-1.0.2.ebuild:
  Stable on ppc wrt bug 202087

  15 Dec 2007; Doug Klima <cardoe@gentoo.org> xmessage-1.0.2.ebuild:
  amd64 stable wrt bug #202087

  13 Dec 2007; Raúl Porcel <armin76@gentoo.org> xmessage-1.0.2.ebuild:
  alpha/ia64 stable wrt #202087

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> xmessage-1.0.2.ebuild:
  Sparc stable --- Bug #202087 --- good for 3 months.

  09 Nov 2007; Seemant Kulleen <seemant@gentoo.org> xmessage-1.0.1.ebuild:
  stabling sh

  09 Nov 2007; Seemant Kulleen <seemant@gentoo.org> xmessage-1.0.1.ebuild,
  xmessage-1.0.2.ebuild:
  added the sh architecture, because of xterm.

*xmessage-1.0.2 (08 Sep 2007)

  08 Sep 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  +xmessage-1.0.2.ebuild:
  Bump for 7.3.

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  xmessage-1.0.1.ebuild:
  Update description to be less generic.

  14 Aug 2006; Thomas Cort <tcort@gentoo.org> xmessage-1.0.1.ebuild:
  Stable on alpha.

  11 Aug 2006; Thomas Cort <tcort@gentoo.org> xmessage-1.0.1.ebuild:
  Added ~alpha keyword.

  21 Jul 2006; Jeroen Roovers <jer@gentoo.org> xmessage-1.0.1.ebuild:
  Stable on HPPA.

  11 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  xmessage-1.0.1.ebuild:
  arm/mips/sparc stable.

  11 Jul 2006; Aron Griffis <agriffis@gentoo.org> xmessage-1.0.1.ebuild:
  Mark 1.0.1 stable on ia64

  11 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  xmessage-1.0.1.ebuild:
  arm/mips/sparc stable.
