@@ -1,0 +1,18 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xmessage/Attic/xmessage-1.0.2-r1.ebuild,v 1.1 2009/01/16 13:05:20 remi Exp $
+
+# Must be before x-modular eclass is inherited
+#SNAPSHOT="yes"
+
+inherit x-modular
+
+DESCRIPTION="display a message or query in a window (X-based /bin/echo)"
+
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
+IUSE="xprint"
+
+RDEPEND="x11-libs/libXaw"
+DEPEND="${RDEPEND}"
+
+CONFIGURE_OPTIONS="--disable-xprint"
