@@ -1,6 +1,11 @@
 # ChangeLog for x11-apps/xmessage
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xmessage/ChangeLog,v 1.31 2007/12/20 00:25:20 cla Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xmessage/ChangeLog,v 1.32 2009/01/16 13:05:20 remi Exp $
+
+*xmessage-1.0.2-r1 (16 Jan 2009)
+
+  16 Jan 2009; Rémi Cardona <remi@gentoo.org> +xmessage-1.0.2-r1.ebuild:
+  remove xprint support (see bug #254874)
 
   19 Dec 2007; Dawid Węgliński <cla@gentoo.org> xmessage-1.0.2.ebuild:
   Stable on x86 (bug #202087)
